--- a/env.yml
+++ b/env.yml
@@ -3,4 +3,4 @@ prod:
 dev:
   sql_uri: 'mysql://root@localhost/beermap_development'
 test:
-  sql_uri: 'mysql://root@localhost/beermap_development'
+  sql_uri: 'mysql://root@localhost/beermap_test'
